publish article open-iscsi 98e5122d5e61f3757a9d

--- a/articles/98e5122d5e61f3757a9d.md
+++ b/articles/98e5122d5e61f3757a9d.md
@@ -3,7 +3,7 @@ title: "Ubuntuでopen-iscsi(2.0.874 @raspberry pi 4 / ubuntu 20.04)"
 emoji: "😽"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["iscsi","ubuntu","raspberrypi","nas","fstab"]
-published: false
+published: true
 ---
 ## 経緯
 
