--- a/articles/98e5122d5e61f3757a9d.md
+++ b/articles/98e5122d5e61f3757a9d.md
@@ -5,11 +5,14 @@ type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["iscsi","ubuntu","raspberrypi","nas","fstab"]
 published: false
 ---
-## 経緯
+:::message
+投稿:2021/04/30, 更新:2021/05/01
+:::
+# 経緯
 
 USBで外付けHDDを繋げても良かったのだけど、バックアップの手間削減とNASを活用するためにiSCSIで接続することに。
 
-## インストール
+# インストール
 
 aptより
 
@@ -17,8 +20,8 @@ aptより
 sudo apt update
 sudo apt install open-iscsi
 ```
------
-## 設定
+
+# 設定
 
 まずは、使用例を検索しつつ、[本家](https://github.com/open-iscsi/open-iscsi)を読む。
 
@@ -43,8 +46,8 @@ sudo iscsiadm -m
 1. パーティション設定。
 1. デバイスをマウント。
 1. 自動マウント設定。
------
-### 1. ターゲット探索・登録
+
+## 1. ターゲット探索・登録
 
 使用するコマンド
 
@@ -79,6 +82,7 @@ iscsiadm -m discoverydb -t st -p 10.55.61.110:3260 --discover
 に生成される。
 このファイルは、iscsiadm -m discoverydb コマンドで更新されてしまうので、直接は弄らない方が良い。
 
+:::message
 個別の設定を保持するためには、
 
 ```bash
@@ -86,6 +90,7 @@ iscsiadm -m discoverydb -t st -p 10.55.61.110:3260 --discover
 ```
 
 のように別名のファイルを作成する。(iscsid.confは共通設定ファイルのイメージ)
+:::
 
 余計なものは、以下で消去。
 (iscsi.serviceのExecStartが、iscsiadm -m node --loginall=automatic となっており、登録されている全てのターゲットに接続しにいくので、残しておくと不要なアクセスやログインが発生。)
@@ -107,7 +112,7 @@ sudo iscsiadm -m node -T iqn.2004-04.com.test:target01.38f135 --op=delete
 
 -------
 
-### 2. ターゲットにログイン
+## 2. ターゲットにログイン
 
 ```bash
 sudo iscsiadm -m node -T iqn.2004-04.com.test:target01.38f135 -l
@@ -127,7 +132,7 @@ sudo iscsiadm -m node -T iqn.2004-04.com.test:target01.38f135 --logout
 
 -------
 
-### 3. パーティション設定
+## 3. パーティション設定
 
 /dev/sda や /dev/sdb にてデバイスが認識されるので、パーティションを切ってフォーマット。
 
@@ -141,7 +146,7 @@ mkfs.ext4 /dev/sda1
 
 -------
 
-### 4. デバイスをマウント
+## 4. デバイスをマウント
 
 マウントする。例えば、
 
@@ -152,21 +157,21 @@ sudo mount /dev/sda /mnt/iscsi/target01
 
 -------
 
-### 5. ブート処理設定
+## 5. ブート処理設定
 
-#### iscsi.service起動時の自動接続
+### iscsi.service起動時の自動接続
 
 設定ファイル(iscsid.conf or 個別設定)で
 
-```ini
-# node.startup = automatic
-node.startup = manual
-↓
-node.startup = automatic
-# node.startup = manual
+```diff ini
+- # node.startup = automatic
++ node.startup = automatic
+
+- node.startup = manual
++ # node.startup = manual
 ```
 
-#### 自動マウント
+### 自動マウント
 
 ```bash
 /etc/fstab
@@ -191,7 +196,7 @@ mount オプション詳細:
 sudo blkid /dev/sda1
 ```
 
-### その他
+# その他
 
 - イニシエーターのIQN名
 
@@ -219,9 +224,9 @@ sudo blkid /dev/sda1
 
 ----------
 
-### マウントオプションの挙動
+## マウントオプションの挙動
 
-#### _netdev,x-systemd.automount,x-systemd.device-timeout=60
+### _netdev,x-systemd.automount,x-systemd.device-timeout=60
 ```bash:/var/log/syslog
 12:58:34 ubuntu systemd[1]: Listening on Open-iSCSI iscsid Socket.
 12:58:34 ubuntu systemd[1]: Starting iSCSI initiator daemon (iscsid)...
@@ -239,7 +244,7 @@ sudo blkid /dev/sda1
 13:01:47 ubuntu systemd[1]: Mounting /mnt/iscsi/target01...
 13:01:47 ubuntu systemd[1]: Mounted /mnt/iscsi/target01.
 ```
-#### _netdev
+### _netdev
 ```bash:/var/log/syslog
 12:48:36 ubuntu systemd[1]: Listening on Open-iSCSI iscsid Socket.
 12:48:36 ubuntu systemd[1]: Starting iSCSI initiator daemon (iscsid)...
@@ -257,20 +262,19 @@ sudo blkid /dev/sda1
 12:49:15 ubuntu systemd[1]: Mounted /mnt/iscsi/target01.
 ```
 -----
-### lvm2-monitor がシャットダウンでスタックする問題
+## lvm2-monitor がシャットダウンでスタックする問題
 LVMは使っていないので、取り合えず
 ```bash
 sudo systemctl disable lvm2-monitor.service
 ```
 ---
 
-### 参考
+## 参考
 
-#### 本家:
-https://github.com/open-iscsi/open-iscsi
-
-#### ArchLinux Wiki:
+- 本家:
+  @[card](https://github.com/open-iscsi/open-iscsi)
+- ArchLinux Wiki:
 <https://wiki.archlinux.jp/index.php/Open-iSCSI>
 
-#### Server-World:
+- Server-World:
 <https://www.server-world.info/query?os=Ubuntu_20.04&p=iscsi&f=3>
