記載ミスにより削除: iscsiadm -m node -U all マウントオプションの挙動: まとめ追加 ExecStart: 追記

--- a/articles/98e5122d5e61f3757a9d.md
+++ b/articles/98e5122d5e61f3757a9d.md
@@ -93,7 +93,7 @@ iscsiadm -m discoverydb -t st -p 10.55.61.110:3260 --discover
 :::
 
 余計なものは、以下で消去。
-(iscsi.serviceのExecStartが、iscsiadm -m node --loginall=automatic となっており、登録されている全てのターゲットに接続しにいくので、残しておくと不要なアクセスやログインが発生。)
+(iscsi.serviceのExecStartは、iscsiadm -m node --loginall=automatic となっており、node.startup = automaticが指定されている全てのターゲットに接続しにいく。)
 
 ```bash
 sudo iscsiadm -m node -T iqn.2004-04.com.test:target01.38f135 --op=delete
@@ -210,12 +210,6 @@ sudo blkid /dev/sda1
  sudo iscsiadm -m node
  ```
 
-- 登録ターゲットからログアウト
-
- ```bash
- sudo iscsiadm -m node -U all
- ```
-
 - セッション(ターゲットとの接続)一覧
 
  ```bash
@@ -225,6 +219,8 @@ sudo blkid /dev/sda1
 ----------
 
 ## マウントオプションの挙動
+- x-systemd.automountを付けると、何処かからmountリクエストがあるまでmountが保留される。
+- _netdevだけの場合は、iscsiのloginが実行された直後にmountが実行される。
 
 ### _netdev,x-systemd.automount,x-systemd.device-timeout=60
 ```bash:/var/log/syslog
@@ -240,6 +236,8 @@ sudo blkid /dev/sda1
 12:59:09 ubuntu iscsiadm[1768]: Logging in to [iface: default, target: iqn.2004-04.com.test:target01.38f135, portal: 10.55.61.110,3260] (multiple)
 12:59:09 ubuntu iscsiadm[1768]: Login to [iface: default, target: iqn.2004-04.com.test:target01.38f135, portal: 10.55.61.110,3260] successful.
 12:59:10 ubuntu iscsid: Connection1:0 to [target: iqn.2004-04.com.test:target01.38f135, portal: 10.55.61.110,3260] through [iface: default] is operational now
+
+# ここで zsh から /mnt/iscsi/以下 にcompletionの探索をかける
 13:01:47 ubuntu systemd[1]: mnt-iscsi-target01.automount: Got automount request for /mnt/iscsi/target01, triggered by 2169 (zsh)
 13:01:47 ubuntu systemd[1]: Mounting /mnt/iscsi/target01...
 13:01:47 ubuntu systemd[1]: Mounted /mnt/iscsi/target01.
@@ -273,6 +271,7 @@ sudo systemctl disable lvm2-monitor.service
 
 - 本家:
   @[card](https://github.com/open-iscsi/open-iscsi)
+
 - ArchLinux Wiki:
 <https://wiki.archlinux.jp/index.php/Open-iSCSI>
 
