--- a/articles/98e5122d5e61f3757a9d.md
+++ b/articles/98e5122d5e61f3757a9d.md
@@ -180,7 +180,7 @@ sudo mount /dev/sda /mnt/iscsi/target01
 UUID=ba4c492d-7fcc-40e6-a39a-b5532ff13357   /mnt/iscsi/target01    ext4    _netdev 0   0
 ```
 
-オプションに _netdev を指定すると、ネットワークが接続されるまでマウントを遅延してくれます。
+オプションに _netdev を指定すると、ネットワークが接続されるまでマウントを遅延してくれる。
 
 mount オプション詳細:
 
