mkfs.ext4 だけ sda になっていた点を修正。sudoを追加。
デバイス名確認の注意事項挿入。

--- a/articles/98e5122d5e61f3757a9d.md
+++ b/articles/98e5122d5e61f3757a9d.md
@@ -136,11 +136,14 @@ sudo iscsiadm -m node -T iqn.2004-04.com.test:target01.38f135 --logout
 例えば
 
 ```bash
-parted --script /dev/sdb "mklabel gpt"
-parted --script /dev/sdb "mkpart primary 0% 100%"
-mkfs.ext4 /dev/sda1
+sudo parted --script /dev/sdb "mklabel gpt"
+sudo parted --script /dev/sdb "mkpart primary 0% 100%"
+sudo mkfs.ext4 /dev/sdb1
 ```
 
+:::message alert
+デバイス名を要確認！
+:::
 -------
 
 ## 4. デバイスをマウント
